Use 'wjs' instead of 'wcp'

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ body,html{ width: 100%; height: 100%; padding: 0px; margin:0px }
 <body>
 <div id="player"></div>
 <script>
-var wcp = require("wcjs-player");
-var player = new wcp("#player").addPlayer();
+var wjs = require("wcjs-player");
+var player = new wjs("#player").addPlayer();
 
 player.vlc.play("http://archive.org/download/CartoonClassics/Krazy_Kat_-_Keeping_Up_With_Krazy.mp4");
 </script>
