--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ body,html{ width: 100%; height: 100%; padding: 0px; margin:0px }
 var wjs = require("wcjs-player");
 var player = new wjs("#player").addPlayer();
 
-player.vlc.play("http://archive.org/download/CartoonClassics/Krazy_Kat_-_Keeping_Up_With_Krazy.mp4");
+player.addPlaylist("http://archive.org/download/CartoonClassics/Krazy_Kat_-_Keeping_Up_With_Krazy.mp4");
+player.play();
 </script>
 </body>
 </html>
