--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@ body,html{ width: 100%; height: 100%; padding: 0px; margin:0px }
 <div id="player"></div>
 <script>
 var wjs = require("wcjs-player");
-var player = new wjs("#player").addPlayer();
+var player = new wjs("#player").addPlayer({ autoplay: true });
 
 player.addPlaylist("http://archive.org/download/CartoonClassics/Krazy_Kat_-_Keeping_Up_With_Krazy.mp4");
-player.play();
 </script>
 </body>
 </html>
